--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "8.5.x",
+    "npm": "5.3.x"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "mongoose": "^4.13.5",
+    "morgan": "^1.9.0",
+    "stylus": "^0.54.5"
   }
 }
